--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "dev:server": "cd server && npm run dev",
     "dev:web": "cd web && npm run dev",
     "build": "npm run build:server && npm run build:web",
-    "build:server": "cd server && npm run build",
-    "build:web": "cd web && npm run build",
+    "build:server-only": "cd server && npm install && npm run build",
+    "build:server": "cd server && npm install && cp ../env.production .env && npm run build",
+    "build:web": "cd web && npm install && npm run build",
     "start": "concurrently \"npm run start:server\" \"npm run start:web\"",
     "start:prod": "npm run start:server",
     "start:server": "cd server && npm run start",
