Fix Next.js build issues: add static export and environment variables

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "npm run build:server && npm run build:web",
     "build:server-only": "cd server && npm install && npm run build",
     "build:server": "cd server && npm install && cp ../env.production .env && npm run build",
-    "build:web": "cd web && npm install && npm run build",
+    "build:web": "cd web && npm install && cp env.local .env.local && npm run build",
+    "build:web-only": "cd web && npm install && cp env.local .env.local && npm run build",
     "start": "concurrently \"npm run start:server\" \"npm run start:web\"",
     "start:prod": "npm run start:server",
     "start:server": "cd server && npm run start",
