Fix server build: remove ES modules and improve build process

--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "dev:web": "cd web && npm run dev",
     "build": "npm run build:server && npm run build:web",
     "build:server-only": "cd server && npm install && npm run build",
-    "build:server": "cd server && npm install && cp ../env.production .env && npm run build",
+    "build:server": "cd server && npm install && cp ../env.production .env && npm run build && ls -la dist/",
     "build:web": "cd web && npm install && cp env.local .env.local && npm run build",
     "build:web-only": "cd web && npm install && cp env.local .env.local && npm run build",
     "start": "concurrently \"npm run start:server\" \"npm run start:web\"",
     "start:prod": "npm run start:server",
+    "start:server-only": "cd server && npm run start",
     "start:server": "cd server && npm run start",
     "start:web": "cd web && npm run start",
     "install:all": "npm install && cd server && npm install && cd ../web && npm install",
