--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev:server": "cd server && npm run dev",
     "dev:web": "cd web && npm run dev",
     "build": "npm run build:server && npm run build:web",
-    "build:server-only": "cd server && npm install && npm run build",
+    "build:server-only": "cd server && npm install && npm run build && ls -la dist/",
     "build:server": "cd server && npm install && cp ../env.production .env && npm run build && ls -la dist/",
     "build:web": "cd web && npm install && cp env.local .env.local && npm run build",
     "build:web-only": "cd web && npm install && cp env.local .env.local && npm run build",
