Fix TypeScript ESLint errors: replace any with unknown

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,6 +11,7 @@
     "rootDir": "src",
     "resolveJsonModule": true,
     "types": ["node"],
+    "typeRoots": ["./node_modules/@types"],
     "noUncheckedIndexedAccess": true,
     "downlevelIteration": true
   },
