--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "worker": "tsx src/worker.ts",
-    "worker:prod": "node dist/worker.js"
+    "worker:prod": "node dist/worker.js",
+    "create-admin": "tsx src/scripts/createAdmin.ts"
   },
   "keywords": [],
   "author": "",
