feat(linking-ui): add primary/manual ad account selection and pass preferences; server: accept preferences in enqueue

--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.18.0",
+    "nanoid": "^5.1.5",
     "socks-proxy-agent": "^8.0.5",
     "zod": "^4.0.17"
   },
