feat(env,worker): allow overriding encryption key doc_id via FB_ENC_KEY_DOC_ID; add DEBUG_E2EE logs; document env in example/production

--- a/env.example
+++ b/env.example
@@ -17,4 +17,16 @@ AES_IV_BASE64=dGVzdC1pdi1rZXk=
 CORS_ORIGIN=*
 
 # Web Application
-NEXT_PUBLIC_API_URL=http://localhost:4000 
+NEXT_PUBLIC_API_URL=http://localhost:4000
+
+# Facebook GraphQL Doc IDs (override as needed)
+# Add-Card mutation doc id
+FB_DOC_ID=
+# Encryption key mutation doc id (PaymentsCometGetServerEncryptionKeyMutation)
+FB_ENC_KEY_DOC_ID=
+
+# E2EE Controls
+# Fail early when no public key is returned
+ENFORCE_E2EE=false
+# Emit diagnostic logs when the encryption key shape cannot be parsed
+DEBUG_E2EE=false 
