fix(worker): include UPL/Flow session headers and paymentAccountID in encryption key request

--- a/env.example
+++ b/env.example
@@ -21,9 +21,11 @@ NEXT_PUBLIC_API_URL=http://localhost:4000
 
 # Facebook GraphQL Doc IDs (override as needed)
 # Add-Card mutation doc id
-FB_DOC_ID=
+FB_DOC_ID=24198400473121149
 # Encryption key mutation doc id (PaymentsCometGetServerEncryptionKeyMutation)
-FB_ENC_KEY_DOC_ID=
+FB_ENC_KEY_DOC_ID=23994203586844376
+# ASBD header id
+ASBD_ID=359341
 
 # E2EE Controls
 # Fail early when no public key is returned
